Update links, fix whiteboard jpg, edits to all posts

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -59,24 +59,25 @@ toc:
 ---
 
 This post is part of a two-part series.
-1. H-Nets: the Past
+1. **H-Nets: the Past**
 2. [H-Nets: the Future]({% post_url 2025-07-11-hnet-future %})
 
 The [H-Net](https://arxiv.org/abs/2507.07955) model has been a dream of mine for years.
 I've been fortunate enough to be able to work with my student [Sukjun Hwang](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model,
 solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
 
-In this post, I provide an informal personal recounting of the motivation and history of this project, providing various context and discussion that wouldn't make sense in a paper.
-This post is really just for fun -- I've always found it interesting to read about the windy history of research instead of just the streamlined final result, and I felt like telling this story.
+In this post, I provide an informal personal recounting of the motivation and history of this project, adding various context and discussion that wouldn't make sense in a paper.
+This post is really just for fun; I've always found it interesting to read about the windy history of research instead of just the streamlined final result, and I felt like telling this story.
 
 In the next post [H-Nets (the Future)]({% post_url 2025-07-11-hnet-future %}), I'll explain why I think this model is so important and a variety of potential downstream implications.
 
+This series of posts can also be seen as a followup to my previous post on [the tradeoffs of SSMs and Transformers]({% post_url 2025-07-08-tradeoffs %}), which may help contextualize this model.
 
 ## Hierarchy is Everywhere
 
 The idea of hierarchy has always resonated with me.
 Perhaps its comes from my penchant for discrete math and roots in competitive programming, where I spent all day working with algorithms on trees, the canonical hierarchical structure.
-Perhaps it reflects the way I tend to think; I structure almost everything hierarchically, for example using bulleted outlines for everything to a perhaps excessive degree (I'd write papers in outline format if I could!).
+Perhaps it reflects the way I tend to think; I structure almost everything hierarchically, for example using bulleted outlines for everything to a perhaps excessive degree (I'd write papers in outline format if I could!).<d-footnote>And you might see hints of this in the H-Net paper 😆</d-footnote>
 
 At some point early in my PhD, when I wasn't doing much productive work, I took an online class for fun on [Learning How to Learn](https://www.coursera.org/learn/learning-how-to-learn).
 I think this is where I came across the concept of [chunking](https://en.wikipedia.org/wiki/Chunking_(psychology)) in human cognition,
@@ -85,18 +86,18 @@ For example, our processing is strongly hierarchical: language is parsed into wo
 perception is organized into objects and events;
 tasks are decomposed into subtasks and goals.
 Raw streams of thought are chunked into *abstractions* and *ideas*.
-The *chunking* concept seems really important to me, and later became adopted for this project's terminology.
+The *chunking* concept seemed really important to me, and later became adopted for this project's terminology.
 
 
 ## Hierarchical RNNs
 
 From the very beginning of my work on sequence models, I was drawn to hierarchical models.
 
-My first exposure to sequence models came during an internship in 2019 at DeepMind under the amazing [Caglar Gulcehre] and [Nando de Freitas].
+My first exposure to sequence models came during an internship in 2019 at DeepMind under the amazing [Caglar Gulcehre](https://www.caglarg.com/) and [Nando de Freitas](https://x.com/nandodf).
 I started thinking about RNNs with help from Caglar, who was an encyclopedia of classical sequence models (e.g. he was on the original [GRU](https://arxiv.org/abs/1412.3555) paper <d-cite key="chung2014empirical"></d-cite>) and pointed me to a lot of interesting ideas.
 
-I was particularly interested in the notion of improving long-range dependencies through hierarchies.
-This had been attempted in many flavors of RNNs, such as the Clockwork RNN <d-cite key="koutnik2014clockwork"></d-cite>,
+I was particularly interested in the idea of improving long-range dependencies through hierarchies.
+This had been attempted in many flavors of older RNNs, such as the Clockwork RNN <d-cite key="koutnik2014clockwork"></d-cite>,
 Hierarchical Multiscale RNN <d-cite key="chung2017hierarchical"></d-cite>,
 and Dilated RNN <d-cite key="chang2017dilated"></d-cite>.
 I played around with tons of ideas on incorporating hierarchies into RNNs;
@@ -108,7 +109,7 @@ which inspired me to think of RNNs as continuous systems and led to a lot of my 
 
 ## S4 and SaShiMi
 
-After DeepMind, my research switched completely to sequence models<d-footnote>By the way, this happened in the 5th year of my PhD. I always tell junior PhD students that it's never too late and to focus on your fundamentals first!</d-footnote>, and I started developing state space models from [HIPPO](https://arxiv.org/abs/2008.07669) <d-cite key="gu2020hippo"></d-cite> to [LSSL](https://arxiv.org/abs/2110.13985) <d-cite key="gu2021combining"></d-cite> to [S4](https://arxiv.org/abs/2111.00396) <d-cite key="gu2022efficiently"></d-cite>, which was the culmination of my PhD.
+After DeepMind, my research switched completely to sequence models<d-footnote>By the way, this happened in the 5th year of my PhD. I always tell junior PhD students that it's never too late and to focus on your fundamentals first!</d-footnote>, and I started developing state space models from [HIPPO](https://arxiv.org/abs/2008.07669) to [LSSL](https://arxiv.org/abs/2110.13985) to [S4](https://arxiv.org/abs/2111.00396) <d-cite key="gu2020hippo"></d-cite><d-cite key="gu2021combining"></d-cite><d-cite key="gu2022efficiently"></d-cite>, which was my breakout paper and the culmination of my PhD.
 A little known fact (I'm guessing) about the S4 paper is that I actually introduced a hierarchical architecture in one of the experiments!
 
 
@@ -136,11 +137,11 @@ But no matter what I did, the hierarchical version was always *noticeably worse*
 
 I eventually gave up on this, and I think it formed the basis for some of my intuition around language modeling.
 In particular, I realized that fixed-width pooling just didn't make sense for language.
-(And moreover, I realized that this is essentially the same as convolutions, or at least has the same inductive bias, and this helped form the basis of my hypothesis about how convolutions don't work for language modeling and more general "discrete data" that has variable spacing. See this part of my [Tradeoffs post]({% post_url 2025-07-08-tradeoffs %}#a-hypothetical-litmus-test) for a bit more discussion.)
+(And moreover, I realized that this is essentially the same as convolutions, or at least has the same inductive bias, and this helped form the basis of my hypothesis about how convolutions don't work for language modeling or more general "discrete data" that has variable spacing. See this part of my [Tradeoffs post]({% post_url 2025-07-08-tradeoffs %}#a-hypothetical-litmus-test) for a bit more discussion.)
 
 To be honest, I don't really understand how so many papers on this U-Net-like strategy have been published for language modeling.
-I'm pretty skeptical that they work at all, as has also been shown in ablations by follow-up works on byte-level language modeling like [SpaceByte](https://arxiv.org/abs/2404.14408) <d-cite key="slagle2024spacebyte"></d-cite> and [BLT](https://arxiv.org/abs/2412.09871) <d-cite key="pagnoni2024byte"></d-cite>.
-I guess one major difference is that all of these papers were using Transformers, which is much better for language than S4, but I still don't think it really makes sense 🤷.
+I'm pretty skeptical that they work at all, as has also been shown in ablations by follow-up works on byte-level language modeling like [SpaceByte](https://arxiv.org/abs/2404.14408) <d-cite key="slagle2024spacebyte"></d-cite> and [BLT](https://arxiv.org/abs/2412.09871) <d-cite key="pagnoni2024byte"></d-cite> (and we also reproduced this ablation in the H-Net paper).
+I guess one major difference is that all of those papers were using Transformers, which is much better for language than S4, but I still don't think it really makes sense 🤷.
 
 ### But they work great for audio!
 
@@ -155,11 +156,11 @@ where [it worked really well](https://arxiv.org/abs/2202.09729) <d-cite key="goe
 Around 2022-2023, I was idly thinking about hierarchies in the back of my mind, and the way I conceptualized the goal was something like this.
 
 ### Attention as a primitive
-To me the self-attention mechanism could be phrased as: A simple module that captures the "primitive" of forming *dense connections* and building *functions on sets*.
-What makes it powerful is that it feels simple and foundational; capturing some fundamental transformation in a simple differentiable way that allows it to be scaled.
+To me the self-attention mechanism could be phrased as: A basic module that captures the "primitive" of forming *dense connections* and building *functions on sets*.
+What makes it powerful is that it feels simple and foundational - capturing some fundamental transformation in a simple differentiable way that allows it to be scaled.
 
 My research is always after these **primitives**: lower-level building blocks that capture fundamental properties and transformations, and can be flexibly applied and scaled.
-My work on state space models, for example, is really about fleshing out the primitive of **recurrence**, which I also do view as being a fundamental property of the world.
+The work I did for years on RNNs and state space models, for example, is really about fleshing out the primitive of **recurrence**, which I also do view as being a fundamental property of the world.
 (It's probably not a very well-known fact that my academic job talk was not about SSMs per se; it was called *New Structured Primitives for Machine Learning*!)
 
 ### Chunking as a primitive
@@ -171,7 +172,7 @@ Surely this was a more appropriate way of modeling language and much more!
 ### Tokenization as a case study
 
 Back then, I had already formulated tokenization as a major problem that I wanted to solve.
-The first reason is, as I explained in my [[previous blog]({% post_url 2025-07-08-tradeoffs %}#should-we-get-rid-of-tokenization)],
+The first reason is, as I explained in my [previous blog]({% post_url 2025-07-08-tradeoffs %}#should-we-get-rid-of-tokenization),
 an appeal to aesthetics and generality, which to me felt important enough.
 But the more specific reason was that I felt that the proper way
 to solve tokenization would be through creating a *differentiable chunking mechanism*, which would be so much more powerful.
@@ -201,7 +202,7 @@ This intuitively had a number of desirable properties, such as
 - if there were a lot of low-information tokens that are very easy to predict, then there probably isn't valuable meaning to them, so they should all be grouped together;
 - if the model is surprised by the next token (such as the beginning of a word, which generally has higher entropy and intrinsic information), then the model would be forced to draw a boundary and start the next chunk, which ideally represented a new unit of meaning.
 
-(Fast forwarding a bit: in H-Net, we don't *completely* understand where and why it decides to draw chunk boundaries, but we did notice a connection to this uncertainty principle; it tends to draw boundaries when surprised. But that's the subject for a future post.)
+(Fast-forwarding a bit: in H-Net, we don't *completely* understand where and why it decides to draw chunk boundaries, but we did notice a connection to this uncertainty principle; it tends to draw boundaries when surprised. But that's the subject for a future post.)
 
 ### The project begins
 About a year ago, in summer 2024, I gave a research talk (an early version of my [[Tradeoffs blog post]({% post_url 2025-07-08-tradeoffs %})]) to my academic lab at CMU and highlighted some key problems and approaches that I thought could be important.
@@ -210,7 +211,7 @@ and I pitched the above approach as a concrete direction to get started.
 
 Some students got interested and started thinking about this.
 I was still very, very interested in the above approach about information-based chunking;
-[Ricardo](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).
+[Ricardo Buitrago](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).
 I kept trying to get Sukjun to try this approach as well, which I was convinced was a good idea...
 
 
@@ -230,10 +231,10 @@ As this project developed, and I told a bunch of people about it, their reaction
 
 <div class="row mt-3">
   <div class="col-sm mt-3 mt-md-0">
-    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/whiteboard_1.jpg" %}
+    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/whiteboard_1.png" %}
   </div>
   <div class="col-sm mt-3 mt-md-0">
-    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/whiteboard_2.jpg" %}
+    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/whiteboard_2.png" %}
   </div>
 </div>
 <div class="caption">
@@ -252,11 +253,12 @@ Around late October 2024, we discovered the [Dynamic Pooling Transformer (DPT)](
 To the best of our knowledge, the DPT is the first, and I think essentially only, prior attempt at building an **end-to-end hierarchical autoregressive model with dynamic chunking**.
 The overall network structure was a similar autoregressive U-Net as Hourglass,
 the main difference being the incorporation of a binary-valued *boundary predictor* that tries to learn where to chunk the data.
+This was very similar to Sukjun's idea, but he called it a router (inspired by MoE terminology).
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/hourglass.png" caption="The Hourglass Transformer" %}
 
 Their motivation for how to overcome the discrete-choice problem was delegating to stochastic reparametrization techniques, namely the Gumbel-softmax trick <d-cite key="maddison2017concrete"></d-cite> <d-cite key="jang2017categorical"></d-cite>.
-In their paper, this fully end-to-end version didn't seem to work too well; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
+In their paper, this fully end-to-end version seemed promising but not ideal; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
 Ultimately, I guess that DPT attempted to tackle this problem somewhat prematurely and important ideas weren't available yet (for example, the most popular [Switch Transformer](https://arxiv.org/abs/2101.03961) MoE method <d-cite key="fedus2022switch"></d-cite>  was pretty new and perhaps not as established yet).
 But I think this paper deserves more credit for at least making a real attempt at this problem!
 
@@ -272,7 +274,7 @@ I think Hourglass is an aesthetically pleasing name, and also elegantly describe
 
 I thought about calling our model the **Hourglass Network** (shortened to H-Net), and the inner dynamic chunking module the **TickTok** layer.
 I really liked this name because there are several layers of meaning to it:
-1. Hourglass still refers to the shape of the hierarchical network. (Calling it "Network" also differentiated from the Hourglass Transformer, I suppose, since one of our important details was using SSMs in the outer layers.)
+1. Hourglass still refers to the shape of the hierarchical network. (Calling it "Network" also differentiates it from the Hourglass Transformer, I suppose, since one of our important details was using SSMs in the outer layers.)
 2. The network structure could be viewed as *multi-rate sequence modeling* involving modalities or streams of data that **tick** at different rates, such as *characters vs. words*, or *audio vs. phonemes*. The **Tick**Tok layer would be the interface between these modalities.
 3. The network could also be viewed as performing a form of dynamic **tok**enization that compresses contiguous inputs just as tokenizers do. The Tick**Tok** layer would again be the mechanism that performs this compression. (*Dynamic tokenization*, instead of dynamic chunking, was also the working name for this project for a long time.)
 4. Finally, there's a **time**-related theme to all of it: *Hourglass* Networks would be defined as models that have *temporally-dynamic* downsampling rates, where the core mechanism is the *"tick tock"* layer.
@@ -294,7 +296,7 @@ At this point, the [Byte Latent Transformer (BLT)](https://arxiv.org/abs/2412.09
 (Actually, DPT above already proposed similar entropy heuristics, but didn't execute it as well.)
 I think the terminology is a little confusing because they indeed built a model operating "end-to-end" on bytes, but to me, the crux of the problem is *learning the dynamic boundaries* jointly with the model itself.
 This is not possible (at least not obviously) with the entropy heuristic and is the main reason why we didn't explore this approach.
-In the H-Net paper, we specifically use "end-to-end" to refer to this stronger definition.
+In the H-Net paper, we specifically use "end-to-end" to refer to the stronger definition.
 Still, it was gratifying to see that my idea to use information-based chunking heuristics does (somewhat) work!
 
 {% details A deeper dive into this approach %}
@@ -308,8 +310,8 @@ The intuition in both is that segmentations should happen if the model is "surpr
 But surprise is better measured by the former quantity, not the latter.
 A concrete example is any conditional distribution that puts most of its mass on one vocab word $w$;
 this conditional distribution would have very low entropy and so the conditional entropy heuristic would never create a new chunk.
-But in the event that the actual token that appears is a different word $v \neq w$,
-the model should be *very* surprised and draw a boundary in the rare case this happens.
+But in the rare event that the actual next word is a different word $v \neq w$,
+the model should be *very* surprised and draw a boundary.
 The negative log-likelihood captures this actual information content.
 
 I'm a little confused by why both DPT and BLT used the conditional entropy instead.
@@ -325,7 +327,7 @@ Maybe I'm missing something, or for some reason empirically it just works better
 I think the architecture has been relatively stable since early 2025, but we spent a long time trying to understand and simplify every part of it.
 For example (this is just a small subset),
 - **Architecture components**: our final architecture included post-norm layers at the end of every sub-network, as well as linear projections on the residual connection. We spent a long time trying to remove these since I felt like they were non-standard techniques (most U-Nets don't have these) that complicated the model. But in the end, they seem very useful---maybe essential---and we kept them.
-- **Sparsity auxiliary loss**: Our auxiliary loss targets a specific down-sampling ratio (Section 2.3 of the paper). This seems a little artificial to me and introduces an annoying new hyperparameter (thankfully, the only one!). I felt like it would be cleaner to simply impose a "sparsity loss" that encouraged higher compression rates (it would be counter-balanced by the main loss function which encourages more compute, hence lower compression rates). We found some things that sort of worked but it didn't seem as consistent, so for this version of the H-Net we kept the targeted loss.
+- **Sparsity auxiliary loss**: Our auxiliary loss targets a specific down-sampling ratio (Section 2.3 of the paper). This seems a little artificial to me and introduces an annoying new hyperparameter (thankfully, the only one!). I felt like it would be cleaner to simply impose a "sparsity loss" that encouraged higher compression rates (it would be counter-balanced by the main loss function which encourages more compute, hence lower compression rates). We found some things that sort of worked but it didn't seem as consistent, so for this version of the H-Net we kept the targeted "ratio loss".
 - **Chunking mechanisms**: We tried so many different variations of the routing module, upsampling step, downsampling step, smoothing module, and every other component. Sukjun's PowerPoint deck of ideas and variations has hundreds of slides, and we were only able to report a very small subset of ablations in the paper of things we did.
 - **Layer allocation**: Normal LLM scaling laws might be concerned with how to scale the width and depth of the model as the parameter count grows. But here, there are so many more choices for how many layers to put in each sub-network and how wide to make them and so on. Beyond that, the question of which layers to use (e.g. Transformer vs. Mamba) in each network is also not obvious, and required tons of experiments to understand (and I'm still not sure we have a completely clear grasp of how they predictably affect performance).
 
@@ -334,8 +336,7 @@ and are as simple as we could make it without sacrificing stability or performan
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/tuning.png" caption="A random slide from the deck of ideas involving multiple residual connections and extra stages/sub-networks, which remained as flags in the internal code for a long time." %}
 
-I haven't been able to run experiments personally in a while, and it was like watching an artist at work to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas -- if it isn't clear, he has by far the best intuition for everything related to H-Nets.
-
+I haven't been able to run experiments personally in a while, and it was like watching an artist at work to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas.
 I have to say that this was one of the most difficult empirical projects I've witnessed (and I think I'm somewhat decent at creating architectures 👀).
 Normally when tuning models, one hopes that different axes of variation act somewhat independently so they can be ablated in isolation and we can perform a "coordinate descent in design space".
 But somehow for this architecture, it felt like there were 12 different axes that were all critical and that *all had to interact together in exactly the right way*.
@@ -343,7 +344,7 @@ There were so many times when we thought that option "A" was better than "B",
 before changing some other design decisions and flip-flopping to B,
 before changing even more things and going back to A. And this happened with every axis of variation.
 Even after we had all the main ingredients, it was really difficult to get them to interact together seamlessly.
-The main driving force here was Sukjun's intuition and persistence.
+But eventually it all came together, thanks to Sukjun's intuition and persistence.
 
 
 ## Tradeoffs of SSMs and Transformers
@@ -361,7 +362,7 @@ The idea is that one should be able to train some lightweight encoder and decode
 This should be able to compress and strip away the noise tokens before feeding it to a main network that operates just over the meaningful tokens.
 
 Can the H-Net actually solve this in practice? I don't know, maybe some more work would need to be done.
-I was more interested in the litmus test as a thought experiment to guide architecture design, not necessarily as an actual synthetic task.
+I was more interested in the litmus test as a thought experiment to guide architecture design, not necessarily as an actual synthetic task.<d-footnote>Another example actually, is the "synthetic copying" task from Mamba, which is written as its main motivation and highlight synthetic experiment. This experiment was actually done at the very end, not the beginning, of the project. I merely used it as a thought experiment to come up with Mamba and convince myself it was the right approach. I ended up doing the synthetic formally for the paper just because it helps motivate it and tell the story, I think, but I would have been perfectly fine as a researcher not testing it and just trusting my intuition.</d-footnote>
 I did hypothesize though that something that could theoretically solve the litmus test might be better at working with noisier data,
 but I'd say I don't have particularly high confidence in this hypothesis (I really don't know).
 
@@ -373,26 +374,26 @@ Finally, let me show perhaps my favorite experiment from the paper, even though 
 In the previous post, I asked the question: [[Is compression a bug, or a feature?]({% post_url 2025-07-08-tradeoffs %}#compression-bug-feature)]
 And I floated the idea that perhaps SSMs had hidden strengths due to their compressive abilities.
 
-The more obvious piece of evidence I gave for this was comparing the inductive bias of SSMs and Transformers, for example, contrasting these two facts:
-1. Transformers and SSMs have similar performance on tokenized language
+The more obvious piece of evidence I gave for this was comparing the inductive bias of SSMs and Transformers, for example, by contrasting these two facts:
+1. Transformers and SSMs have similar performance on tokenized language (with caveats)
 2. Transformers seriously underperform SSMs on untokenized language
 
 My intuitive explanation was that on high-resolution data without meaning (such as characters),
 attention is a poor inductive bias, and understanding the data requires compressing it.
-Ablations in the H-Net paper corroborate this: **any parts of the model interacting directly with byte-level input resolution strongly benefit from SSM layers**.
+Ablations in the H-Net paper corroborate this: **any parts of the model interacting directly with byte-level resolution strongly benefit from SSM layers**.
 
 This raises a natural question though: is the importance of Mamba layers because
-1. they are better at **processing fine-grained byte inputs**, as we already knew?
+1. they are simply better at **processing fine-grained byte inputs**, as we already knew?
 2. or because they are better for **compressing information into the next stage**, even if given coarser inputs?
 
 [//]: # There is an extension to this question though that's more incisive.
 
 We can disentangle these two hypotheses by simply applying an H-Net on data that's not byte-level.
 After all, it's just a generic sequence model architecture that can be applied on any data!
-In particular, let's apply it to data that's already BPE-tokenized.
+In particular, let's apply it to data that's *already BPE-tokenized*.
 
-1. If the first hypothesis holds, then we would expect Mamba to not help in the encoder/decoder,
-since (as mentioned above) they have similar performance to Transformers on standard tokenized language modeling.
+1. If the first hypothesis holds, then we would expect Mamba to *not* help in the encoder/decoder,
+since (as mentioned above) it has similar performance to Transformers on standard tokenized language modeling.
 2. If the second hypothesis holds, then we would expect that encoders/decoders using some Mamba layers to be better than
 pure Transformer layers.
 
@@ -409,14 +410,14 @@ A bunch of questions are pointed out in the Discussions section of the paper, an
 although this is only a subset of the wide range of follow-up directions that I think will be interesting to work on.
 
 One question that I expect we'll get is: do H-Nets **actually scale better**?
-In the paper, we showed training loss curves, where they display a striking trend of seeming to scale better with more data.
-We use these as proxies for a qualitative assessment of their scaling behavior, which I do believe is valuable (a justification is in the Discussion section of the paper).
-I also actually do believe that H-Nets will shift the scaling law curve in a non-trivial way.
+In the paper, we showed training loss curves, where they display a striking trend of seeming to scale better with data.
+We use these as proxies for a qualitative assessment of their performance, which I do believe is valuable (a justification is in the Discussion section of the paper).
+For various reasons I also actually believe that H-Nets will shift the scaling law curve in a non-trivial way (still considering writing a follow-up blog post about this...).
 However, what we did aren't formal scaling laws.
 
 Why didn't we do those? Well, I guess the main reason is limited compute and more so the [sheer difficulty](#a-world-of-improvements) of developing this model,
 which is where all our resources were invested.
-At no point did it seem worth completely freezing the architecture to run out expensive formal scaling laws, when I think we were able to get an intuitive understanding of their behavior from our proxy protocol;
+At no point did it seem worth completely freezing the architecture to run out expensive formal scaling laws, when I think we were able to get an intuitive understanding of its behavior from our proxy protocol;
 and moreover, when it always seems like there are core questions we don't understand and low-hanging improvements to make to the model.
 
 
