--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -176,6 +176,7 @@ The first reason is, as I explained in my [previous blog]({% post_url 2025-07-08
 an appeal to aesthetics and generality, which to me felt important enough.
 But the more specific reason was that I felt that the proper way
 to solve tokenization would be through creating a *differentiable chunking mechanism*, which would be so much more powerful.
+It could be used on any data, and recursed to develop a hierarchy of abstractions.
 This is still the way that I like to pitch the problem now, as some researchers that have talked to me directly might know from the way I hinted at the H-Net project over the last few months.
 
 > Overcoming tokenization is **not about tokenizers**, but about **learning abstractions**. Discovering a tool that can do this will unlock new capabilities.
