Add paper and code links to blogs

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -62,7 +62,11 @@ This post is part of a two-part series.
 1. **H-Nets: the Past**
 2. [H-Nets: the Future]({% post_url 2025-07-11-hnet-future %})
 
-The [H-Net](https://arxiv.org/abs/2507.07955) model has been a dream of mine for years.
+Paper: [https://arxiv.org/abs/2507.07955](https://arxiv.org/abs/2507.07955)
+Code: [https://github.com/goombalab/hnet](https://github.com/goombalab/hnet)
+
+
+The H-Net model has been a dream of mine for years.
 I've been fortunate enough to be able to work with my student [Sukjun Hwang](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model,
 solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
 
