Put an aside about BLT comparison

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -48,7 +48,7 @@ toc:
   - name: Discovering Prior and Concurrent Works
     subsections:
       - name: Hourglass and Dynamic Pooling Transformer
-      - name: BLT
+      - name: Byte Latent Transformer (BLT)
   - name: A World of Improvements
   - name: Tradeoffs of SSMs and Transformers
     subsections:
@@ -216,7 +216,7 @@ and I pitched the above approach as a concrete direction to get started.
 
 Some students got interested and started thinking about this.
 I was still very, very interested in the above approach about information-based chunking;
-[Ricardo Buitrago](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).
+[Ricardo Buitrago](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).<d-footnote>Actually, Ricardo did have a couple quite interesting results that didn't go into the H-Net paper but that we might figure out a way to. 
 I kept trying to get Sukjun to try this approach as well, which I was convinced was a good idea...
 
 
@@ -293,7 +293,7 @@ So we didn't go with it. Alas 🥲
 (I still liked the H-Net name, so we kept it and later "backronymed" it to Hierarchical Network. In my head I still like the name H-Net for this Hourglass connection though.)
 {% enddetails %}
 
-### BLT
+### Byte Latent Transformer (BLT)
 
 By December, we had made a lot of progress and pretty much had the main architecture done (in particular, Sukjun had come up with the *smoothing module* which at the time we were calling the "EMA detokenizer"; as we show in the paper's ablations, this was one of the most important new techniques introduced).
 
@@ -325,6 +325,43 @@ Maybe I'm missing something, or for some reason empirically it just works better
 
 [//]: # After BLT came out, we had the thought to just clean up our (pretty reasonable already at the time) results and put out a pre-print quickly. But we decided to follow our principles: put our heads down and keep working in the direction we believe in, and wait to put something out when it was done in the ideal way we wanted, instead of worrying about community perception.
 
+{% details H-Net vs. BLT %}
+Since I expect to get a lot of questions about how H-Net compares against BLT, I'll be really explicit here. Happy to be corrected by the BLT authors (or anyone else) if I say anything incorrect!
+
+**tl;dr**
+- BLT is not actually end-to-end
+- H-Net should both be much easier to use and perform better than BLT
+
+We can roughly factor the overall design of this family of hierarchical models into two parts:
+(1) the *chunking strategy* (2) the *architecture*
+
+#### Chunking
+The chunking strategy is the core, and is the focus of both of these papers.
+The main advantage of H-Net is that it's *actually end-to-end*.
+
+Additionally, the entropy-based approach of BLT has some intrinsic weaknesses: 
+- It requires significant extra work (to train an auxiliary conditional prediction model)
+- It can't be nested into deeper hierarchies, which was one of the core motivations of H-Net and we showed significantly improved performance. In every experiment we compared, we found H-Net (2-stage) > H-Net (1-stage).
+
+[//]: # - It requires significant extra tuning (there are a few variants of the heuristics for how to create the chunks; my information-based approach describing this blog is yet another variant that hasn't been explored)
+
+In the H-Net paper, we used [SpaceByte](https://arxiv.org/abs/2404.14408) <d-cite key="slagle2024spacebyte"></d-cite> as a baseline instead.
+Instead of an entropy heuristic, SpaceByte simply chunks on certain delimiters in the text.
+For languages like English, we believe that SpaceByte performs quite comparably to the entropy chunking strategy of BLT.
+Some evidence of this is Figure 6 of the BLT paper itself.
+Note that the advantage of BLT over SpaceByte is that the entropy strategy is *more flexible*: it can be applied to languages without delimiter-based segmentation strategies, or potentially even non-discrete sequences of data. 
+However, it's still strictly less flexible than the dynamic chunking (DC) mechanism of H-Net, so I don't think there are any advantages.
+
+#### Architecture
+The architectural components of the models are generally orthogonal to the chunking strategy.
+BLT introduced a number of unusual components, such as a new type of chunk-aware cross-attention layer,
+and large tables of "hash n-gram embeddings".
+We think both of these are unnecessarily complicated; H-Net works just fine without these additional techniques, although I believe that they could also be incorporated into H-Net if desired.
+
+So overall, we felt that the full BLT model was an overly complicated baseline to set up and compare against, and (as explained in the paper) we used SpaceByte as a representative example of BLT-like models.
+But I still like the idea of BLT and I'm glad they published it!
+
+{% enddetails %}
 
 
 ## A World of Improvements
