--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -62,8 +62,8 @@ This post is part of a two-part series.
 1. **H-Nets: the Past**
 2. [H-Nets: the Future]({% post_url 2025-07-11-hnet-future %})
 
-Paper: [https://arxiv.org/abs/2507.07955](https://arxiv.org/abs/2507.07955)
-Code: [https://github.com/goombalab/hnet](https://github.com/goombalab/hnet)
+[[Paper](https://arxiv.org/abs/2507.07955)]
+[[Code](https://github.com/goombalab/hnet)]
 
 
 The H-Net model has been a dream of mine for years.
@@ -83,7 +83,7 @@ The idea of hierarchy has always resonated with me.
 Perhaps its comes from my penchant for discrete math and roots in competitive programming, where I spent all day working with algorithms on trees, the canonical hierarchical structure.
 Perhaps it reflects the way I tend to think; I structure almost everything hierarchically, for example using bulleted outlines for everything to a perhaps excessive degree (I'd write papers in outline format if I could!).<d-footnote>And you might see hints of this in the H-Net paper 😆</d-footnote>
 
-At some point early in my PhD, when I wasn't doing much productive work, I took an online class for fun on [Learning How to Learn](https://www.coursera.org/learn/learning-how-to-learn).
+At some point early in my PhD, when I wasn't doing much productive work, I took an online class for fun called [Learning How to Learn](https://www.coursera.org/learn/learning-how-to-learn).
 I think this is where I came across the concept of [chunking](https://en.wikipedia.org/wiki/Chunking_(psychology)) in human cognition,
 which really resonated with me and felt fundamental to intelligence.
 For example, our processing is strongly hierarchical: language is parsed into words, phrases, clauses, sentences, and beyond;
